--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Github Client</string>
+    <string name="repo_name">Nombre del repositorio</string>
+    <string name="repo_description">Descripción del repositorio</string>
+    <string name="repo_lang">Lenguaje</string>
+    <string name="test_text">Esto es una prueba</string>
 </resources>
