--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="test_text">Esto es una prueba</string>
     <string name="save">Guardar</string>
     <string name="cancel">Cancelar</string>
+    <string name="edit_button_description">Editar repositorio</string>
+    <string name="delete_button_description">Eliminar repositorio</string>
 </resources>
